# Unfour

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NEXT_STEPS.md  NOTICE  OPEN_ISSUES.md  PROJECT_STATE.md  README.md  README.zh-CN.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts  vitest.setup.ts
.design-sync/: config.json  strip-tw-vars.mjs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.trae/documents/: api-default-collection_plan.md
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: command_bus.rs  commands.rs  lib.rs  main.rs  redaction.rs
apps/desktop/src-tauri/src/services/: database.rs  secret_store.rs
apps/desktop/src-tauri/windows/: hooks.nsh
crates/database-engine/: Cargo.toml
crates/http-engine/: Cargo.toml
crates/local-storage/: Cargo.toml
crates/secret-store/: Cargo.toml
crates/secret-store/src/: secret_store.rs
crates/ssh-engine/: Cargo.toml
crates/unfour-app/: Cargo.toml
crates/unfour-command-bus/: Cargo.toml
crates/unfour-core/: Cargo.toml
crates/unfour-diag/: Cargo.toml
crates/unfour-diag/src/: bundle.rs  lib.rs  lib_tests.rs
crates/unfour-mcp/: Cargo.toml
crates/unfour-paths/: Cargo.toml
crates/workspace-engine/: Cargo.toml
docs/: roadmap.md  ui-guidelines.md
docs/agents/: CHECKPOINT_REFRESH.md  EXECUTION_PROTOCOL.md  NEXT_STEPS.md  OPEN_ISSUES.md  PROJECT_MAP.md  PROJECT_STATE.md  START_HERE.md
docs/ai/: mcp.md
docs/architecture/: data-storage.md  deletion-gc-strategy.md  diagnostics.md  large-file-audit.md  package-boundaries.md  project-structure.md  security-model.md
docs/decisions/: 0001-tech-stack.md
docs/engineering/: architecture.md  command-bus.md  progress.md  security.md  task-breakdown.md  workspace-model.md
docs/mcp/: codex-setup.md  overview.md  tools.md
docs/release/: distribution.md  release-checklist.md  signing.md
docs/review/: code-review-2026-07-12.md
docs/testing/: playwright.md  release-verification.md  testing-layout.md
docs/ui/: interaction-guidelines.md  ui-components.md  ui-guidelines.md  ui-layouts.md  ui-refactor-plan.md
docs/user/: USER_GUIDE.md
scripts/: check-large-files.mjs  check-large-files.test.mjs  check-migrations.mjs  check-shared-tokens.mjs  large-files-baseline.json  prepare-tauri-sidecars.mjs  sync-version.mjs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_error.rs  audit_log.rs  command_bus.rs  commands.rs  lib.rs  local_db.rs  (+1 more)
(+167 files in other folders)
