[package]
name = "unfour-diag"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
unfour-core = { path = "../unfour-core" }
unfour-paths = { path = "../unfour-paths" }
uuid = { version = "1", features = ["serde", "v4"] }
