[package]
name = "unfour-workspace"
version = "0.1.0"
description = "A cross-platform operations and development workspace."
authors = ["Unfour"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "unfour_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Kept as a direct dependency so tauri-build can resolve this plugin's
# permission manifests for `capabilities/` (the runtime `.plugin()` call lives
# in `unfour-app`). Any plugin referenced by a capability must be a direct
# dependency of the binary crate, not only of `unfour-app`.
tauri-plugin-opener = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Shared composition layer (plugins, command-bus setup, AppState, commands).
unfour-app = { path = "../../../crates/unfour-app" }

[dev-dependencies]
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
ssh-native = ["unfour-app/ssh-native"]
